# qtgpt

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  ChatWidget.h  Makefile  PipeHandler.h  PipeMessage.h  Plugin.cpp  PluginManager.h  QtGPT.cpp  README.md  SettingsDialog.h  StockTool.cpp  ThreadWorker.h  Tool.cpp  WeatherTool.cpp
src/: ChatHistoryViewer.cpp  ChatHistoryViewer.h  ChatWidget.cpp  ChatWidget.h  MenuBar.cpp  MenuBar.h  PipeHandler.cpp  PipeHandler.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  QtGPT.cpp  QtGPT.h  SettingsDialog.cpp  SettingsDialog.h  StockTool.cpp  StockTool.h  ThreadWorker.cpp  ThreadWorker.h  Tool.cpp  Tool.h  WeatherTool.cpp  WeatherTool.h  disasterparty_wrapper.h  main.cpp  utils.cpp  utils.h
